# SoftwareRenderingEngine

./: CMakeLists.txt  README.md
Source/: Common.h  main.cpp
Source/Application/: Application.cpp  Application.h  Game.cpp  Game.h
Source/Graphics/: Color.cpp  Color.h  EngineWindow.cpp  EngineWindow.h  Renderer.cpp  Renderer.h  SoftwareRenderer.cpp  SoftwareRenderer.h  SoftwareShader.cpp  SoftwareShader.h  SubWindow.cpp  SubWindow.h
Source/Graphics/UI/: UI_Element.cpp  UI_Element.h
Source/Input/: InputHandler.cpp  InputHandler.h
Source/Utils/: ScopeTimer.cpp  ScopeTimer.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
